--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,13 @@ dependencies:
   flutter:
     sdk: flutter
   qr_flutter: ^4.0.0
+  flutter_barcode_scanner: ^2.0.0
+
+  # permission_handler: ^10.2.0
+  # gallery_saver: ^2.3.2
+  # path_provider: ^2.0.13
+  # qr_code_scanner: ^1.0.1
+  # widgets_to_image: ^0.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
