--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   qr_flutter: ^4.0.0
+  provider: ^6.0.5
   # flutter_barcode_scanner: ^2.0.0
 
   # permission_handler: ^10.2.0
